tela de autores

--- a/views/Tela-principal_BookGear.html
+++ b/views/Tela-principal_BookGear.html
@@ -246,7 +246,7 @@
             <a href="/compre">
                 <div class="item item4">
                     <img class="imgbox" src="../images/box.jpg">
-                    <p class="descrição">Caixa da BookGear Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae exercitationem at ducimus fugit reiciendis nam, placeat doloribus optio. Doloremque voluptatibus ullam debitis consequuntur consectetur ex voluptatem saepe reiciendis provident quod.</p>
+                    <p class="descrição">Caixa da BookGear Lorem ipsum dolor sit exercitationem at ducimus placeat doloribus optio. Doloremque voluptatibus ullam debitis consequuntur consectetur ex voluptatem saepe reiciendis provident quod.</p>
                 </div>
             </a>
             <a href="/compre">
