--- a/views/autores.html
+++ b/views/autores.html
@@ -14,159 +14,199 @@
     <main>
         <div class="responsive-container">
             <div class="grid">
-                <div class="grid-column">
-                    <a class="product" href="#">
-                        <div class="product-image">
-                            <img src="../public/images/box.jpg" />
-                        </div>
-                        <div class="product-content">
-                            <div class="product-info">
-                                <h2 class="product-title">Cosmonaut</h2>
-                                <p class="product-price">$ 10</p>
-                            </div>
-                            <button class="product-action"><i class="material-icons-outlined">like</i></button>
-                        </div>
-                    </a>
 
-                    <a class="product" href="#">
-                        <div class="product-image">
-                            <img src="../public/images/box.jpg" />
-                        </div>
-                        <div class="product-content">
-                            <div class="product-info">
-                                <h2 class="product-title">Monster Milkshake</h2>
-                                <p class="product-price">$ 9</p>
-                            </div>
-                            <button class="product-action"><i class="material-icons-outlined">like</i></button>
-                        </div>
-                    </a>
-                    <a class="product" href="#">
-                        <div class="product-image">
-                            <img src="../public/images/box.jpg" />
-                        </div>
-                        <div class="product-content">
-                            <div class="product-info">
-                                <h2 class="product-title">Juicy Banana</h2>
-                                <p class="product-price">$ 9</p>
-                            </div>
-                            <button class="product-action"><i class="material-icons-outlined">like</i></button>
-                        </div>
-                    </a>
-                </div>
-                <div class="grid-column">
-                    <a class="product" href="#">
-                        <div class="product-image">
-                            <img src="../public/images/box.jpg"/>
-                        </div>
-                        <div class="product-content">
-                            <div class="product-info">
-                                <h2 class="product-title">Palmistry</h2>
-                                <p class="product-price">$ 9</p>
-                            </div>
-                            <button class="product-action"><i class="material-icons-outlined">like</i></button>
-                        </div>
-                    </a>
-                    <a class="product" href="#">
-                        <div class="product-image">
-                            <img src="../public/images/box.jpg" />
-                        </div>
-                        <div class="product-content">
-                            <div class="product-info">
-                                <h2 class="product-title">Fish With Gas Mask</h2>
-                                <p class="product-price">$ 12</p>
-                            </div>
-                            <button class="product-action"><i class="material-icons-outlined">like</i></button>
-                        </div>
-                    </a>
-                    <a class="product" href="#">
-                        <div class="product-image">
-                            <img src="../public/images/box.jpg" />
-                        </div>
-                        <div class="product-content">
-                            <div class="product-info">
-                                <h2 class="product-title">Gangster</h2>
-                                <p class="product-price">$ 5</p>
-                            </div>
-                            <button class="product-action"><i class="material-icons-outlined">like</i></button>
-                        </div>
-                    </a>
-                </div>
-                <div class="grid-column">
-                    <a class="product" href="#">
-                        <div class="product-image">
-                            <img src="../public/images/box.jpg"/>
-                        </div>
-                        <div class="product-content">
-                            <div class="product-info">
-                                <h2 class="product-title">Star wars oo imperio contra atacaaaaaaaaaaaaaaaaaaaaaabbbbbbaaaaaaa Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, rem deserunt quae reprehenderit nam minus accusantium iure, voluptas delectus voluptatum ipsam alias harum sint quaerat autem illum perferendis iusto magnam.</h2>
-                                <p class="product-price">$ 15</p>
-                            </div>
-                            <button class="product-action"><i class="material-icons-outlined">like</i></button>
-                        </div>
-                    </a>
-                    <a class="product" href="#">
-                        <div class="product-image">
-                            <img src="../public/images/box.jpg" />
-                        </div>
-                        <div class="product-content">
-                            <div class="product-info">
-                                <h2 class="product-title">Smoking Ain't Cool</h2>
-                                <p class="product-price">$ 5</p>
-                            </div>
-                            <button class="product-action"><i class="material-icons-outlined">like</i></button>
-                        </div>
-                    </a>
-                    <a class="product" href="#">
-                        <div class="product-image">
-                            <img src="../public/images/box.jpg" />
-                        </div>
-                        <div class="product-content">
-                            <div class="product-info">
-                                <h2 class="product-title">the witcher</h2>
-                                <p class="product-price">$ 15</p>
-                            </div>
-                            <button class="product-action"><i class="material-icons-outlined">like</i></button>
-                        </div>
-                    </a>
-                </div>
-                <div class="grid-column">
-                    <a class="product" href="#">
-                        <div class="product-image">
-                            <img src="../public/images/box.jpg" />
-                        </div>
+                <a class="product" href="#">
+                    <div class="product-image">
+                        <img src="../public/images/box.jpg" />
+                    </div>
+                    <div class="bottom">
                         <div class="product-content">
                             <div class="product-info">
                                 <h2 class="product-title">Cosmonaut</h2>
                                 <p class="product-price">$ 10</p>
                             </div>
-                            <button class="product-action"><i class="material-icons-outlined">like</i></button>
+
                         </div>
-                    </a>
-                    <a class="product" href="#">
-                        <div class="product-image">
-                            <img src="../public/images/box.jpg" />
-                        </div>
+                        <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                    </div>
+                </a>
+
+                <a class="product" href="#">
+                    <div class="product-image">
+                        <img src="../public/images/box.jpg" />
+                    </div>
+                    <div class="bottom">
                         <div class="product-content">
                             <div class="product-info">
-                                <h2 class="product-title">Monster Milkshake</h2>
-                                <p class="product-price">$ 9</p>
+                                <h2 class="product-title">Cosmonaut</h2>
+                                <p class="product-price">$ 10</p>
                             </div>
-                            <button class="product-action"><i class="material-icons-outlined">like</i></button>
+
                         </div>
-                    </a>
-                    <a class="product" href="#">
-                        <div class="product-image">
-                            <img src="../public/images/box.jpg" />
-                        </div>
+                        <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                    </div>
+                </a>
+
+                <a class="product" href="#">
+                    <div class="product-image">
+                        <img src="../public/images/box.jpg" />
+                    </div>
+                    <div class="bottom">
                         <div class="product-content">
                             <div class="product-info">
-                                <h2 class="product-title">Juicy Banana</h2>
-                                <p class="product-price">$ 9</p>
+                                <h2 class="product-title">Star wars oo imperio contra adipisicing elit. Nulla, rem deserunt quae accusantium iure, voluptas delectus voluptatum ipsam alias harum sint quaerat autem illum perferendis iusto magnam.</h2>
+                                <p class="product-price">$ 10</p>
                             </div>
-                            <button class="product-action"><i class="material-icons-outlined">like</i></button>
+
                         </div>
-                    </a>
-                </div>
+                        <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                    </div>
+                </a>
+
+                <a class="product" href="#">
+                    <div class="product-image">
+                        <img src="../public/images/box.jpg" />
+                    </div>
+                    <div class="bottom">
+                        <div class="product-content">
+                            <div class="product-info">
+                                <h2 class="product-title">Cosmonaut</h2>
+                                <p class="product-price">$ 10</p>
+                            </div>
+
+                        </div>
+                        <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                    </div>
+                </a>
+
+                <a class="product" href="#">
+                    <div class="product-image">
+                        <img src="../public/images/box.jpg" />
+                    </div>
+                    <div class="bottom">
+                        <div class="product-content">
+                            <div class="product-info">
+                                <h2 class="product-title">Cosmonaut</h2>
+                                <p class="product-price">$ 10</p>
+                            </div>
+
+                        </div>
+                        <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                    </div>
+                </a>
+
+                <a class="product" href="#">
+                    <div class="product-image">
+                        <img src="../public/images/box.jpg" />
+                    </div>
+                    <div class="bottom">
+                        <div class="product-content">
+                            <div class="product-info">
+                                <h2 class="product-title">Cosmonaut</h2>
+                                <p class="product-price">$ 10</p>
+                            </div>
+
+                        </div>
+                        <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                    </div>
+                </a>
+
+                <a class="product" href="#">
+                    <div class="product-image">
+                        <img src="../public/images/box.jpg" />
+                    </div>
+                    <div class="bottom">
+                        <div class="product-content">
+                            <div class="product-info">
+                                <h2 class="product-title">Cosmonaut</h2>
+                                <p class="product-price">$ 10</p>
+                            </div>
+
+                        </div>
+                        <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                    </div>
+                </a>
+
+                <a class="product" href="#">
+                    <div class="product-image">
+                        <img src="../public/images/box.jpg" />
+                    </div>
+                    <div class="bottom">
+                        <div class="product-content">
+                            <div class="product-info">
+                                <h2 class="product-title">Cosmonaut</h2>
+                                <p class="product-price">$ 10</p>
+                            </div>
+
+                        </div>
+                        <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                    </div>
+                </a>
+
+                <a class="product" href="#">
+                    <div class="product-image">
+                        <img src="../public/images/box.jpg" />
+                    </div>
+                    <div class="bottom">
+                        <div class="product-content">
+                            <div class="product-info">
+                                <h2 class="product-title">Cosmonaut</h2>
+                                <p class="product-price">$ 10</p>
+                            </div>
+
+                        </div>
+                        <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                    </div>
+                </a>
+
+                <a class="product" href="#">
+                    <div class="product-image">
+                        <img src="../public/images/box.jpg" />
+                    </div>
+                    <div class="bottom">
+                        <div class="product-content">
+                            <div class="product-info">
+                                <h2 class="product-title">Cosmonaut</h2>
+                                <p class="product-price">$ 10</p>
+                            </div>
+
+                        </div>
+                        <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                    </div>
+                </a>
+
+                <a class="product" href="#">
+                    <div class="product-image">
+                        <img src="../public/images/box.jpg" />
+                    </div>
+                    <div class="bottom">
+                        <div class="product-content">
+                            <div class="product-info">
+                                <h2 class="product-title">Cosmonaut</h2>
+                                <p class="product-price">$ 10</p>
+                            </div>
+
+                        </div>
+                        <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                    </div>
+                </a>
+
+                <a class="product" href="#">
+                    <div class="product-image">
+                        <img src="../public/images/box.jpg" />
+                    </div>
+                    <div class="bottom">
+                        <div class="product-content">
+                            <div class="product-info">
+                                <h2 class="product-title">Cosmonaut</h2>
+                                <p class="product-price">$ 10</p>
+                            </div>
+
+                        </div>
+                        <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                    </div>
+                </a>
+
             </div>
         </div>
     </main>
