--- a/views/Tela-principal_BookGear.html
+++ b/views/Tela-principal_BookGear.html
@@ -145,6 +145,10 @@
         color: grey;
     }
 
+    .categorias{
+        list-style-type: none;  
+    }
+
     .input_categoria {
         font-size: 15px;
         border: none;
@@ -317,6 +321,60 @@ background-color: #FFF;
             <img class="banner2 banner" src="../images/banner1.png" alt="banner">
         </div>
         <div class="container principal">
+
+            <a class="product" href="#">
+                <div class="product-image">
+                    <img class="imagem-produto" src="../images/box.jpg" />
+                </div>
+                <div class="bottom">
+                    <div class="product-content">
+                        <div class="product-info">
+                            <h2 class="product-title">Star wars oo imperio contra adipisicing elit. Nulla, rem deserunt
+                                quae accusantium iure, voluptas delectus voluptatum ipsam alias harum sint quaerat autem
+                                illum perferendis iusto magnam.</h2>
+                            <p class="product-price">$ 10</p>
+                        </div>
+
+                    </div>
+                    <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                </div>
+            </a>
+
+            <a class="product" href="#">
+                <div class="product-image">
+                    <img class="imagem-produto" src="../images/box.jpg" />
+                </div>
+                <div class="bottom">
+                    <div class="product-content">
+                        <div class="product-info">
+                            <h2 class="product-title">Star wars oo imperio contra adipisicing elit. Nulla, rem deserunt
+                                quae accusantium iure, voluptas delectus voluptatum ipsam alias harum sint quaerat autem
+                                illum perferendis iusto magnam.</h2>
+                            <p class="product-price">$ 10</p>
+                        </div>
+
+                    </div>
+                    <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                </div>
+            </a>
+
+            <a class="product" href="#">
+                <div class="product-image">
+                    <img class="imagem-produto" src="../images/box.jpg" />
+                </div>
+                <div class="bottom">
+                    <div class="product-content">
+                        <div class="product-info">
+                            <h2 class="product-title">Star wars oo imperio contra adipisicing elit. Nulla, rem deserunt
+                                quae accusantium iure, voluptas delectus voluptatum ipsam alias harum sint quaerat autem
+                                illum perferendis iusto magnam.</h2>
+                            <p class="product-price">$ 10</p>
+                        </div>
+
+                    </div>
+                    <button class="product-action"><i class="material-icons-outlined">like</i></button>
+                </div>
+            </a>
 
             <a class="product" href="#">
                 <div class="product-image">
