--- a/views/tela_usuario.html
+++ b/views/tela_usuario.html
@@ -49,17 +49,17 @@
             background-color: rgba(42, 41, 43);
             padding: 20px;
             padding-top: 20px;
-            height: 80%;
+            height: 25vw;
             width: 65%;
-            margin: 120px 0px 0px 16%;
+            margin: 10% 0px 0px 16%;
             justify-content: space-between;
         }
         .insidebox{
             background-color: #181818;
             display: flex;
             flex-direction: column;
-            height: 360px;
-            width: 220px;
+            height: 25vw;
+            width: 15vw;
             align-items: center; 
         }
         
@@ -71,8 +71,8 @@
         font-size: 15px;
         border: none;
         padding: 10px;
-        margin: 15px;
-        width: 200px;
+        margin-top: 15%;
+        width: 15vw;
         transition: 0.6s ease;
         background-color: rgb(24, 24, 24);
         color: gray;
@@ -87,7 +87,7 @@
     }
 
     .User{
-        margin: 30px;
+        margin: 2vw;
         color: white;
     }
     </style>
